Se agrega la presentacion de tech sphere

--- a/1.html
+++ b/1.html
@@ -56,8 +56,8 @@ console.<span class="function">log</span>(response.output_text);
 
     <!-- Navegación simple -->
     <div class="fixed bottom-8 left-8">
-        <a href="index.html" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded font-medium flex items-center gap-2">
-            <span class="material-icons text-lg">home</span> Inicio
+        <a href="0.html" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded font-medium">
+            ← Anterior
         </a>
     </div>
     
