Se agrega qr de hipanda

--- a/9.html
+++ b/9.html
@@ -293,8 +293,8 @@
     </div>
 
     <div class="fixed bottom-8 right-8">
-        <a href="index.html" class="bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded font-medium">
-            Inicio
+        <a href="10.html" class="bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded font-medium">
+            Siguiente →
         </a>
     </div>
 </body>
